--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="vendor/fa/fontawsome/css/all.css">
 </head>
 <body data-spy="scroll" data-target="#navbarResponsive"> 
     <div id="home">
@@ -162,5 +162,6 @@
         </footer>
         <script src="vendor/jquery/jquery.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+        <script src="vendor/fa/fontawsome/js/all.js"></script>
     </body>
     </html>
