--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </div>
                     <div class="col-lg-6">
                         <h2>Make Contact:</h2>
-                        <form action="#" method="post">
+                        <form action="index.html" method="post">
                             <div class="form-group">
                                 <label for="name" class="float-left mr-4"><i class="fa fa-user"></i> Name</label>
                                 <input type="text" name="name" id="name" class="form-control">
