--- a/index.html
+++ b/index.html
@@ -123,22 +123,22 @@
                         <form action="index.html" method="post">
                             <div class="form-group">
                                 <label for="name" class="float-left mr-4"><i class="fa fa-user"></i> Name</label>
-                                <input type="text" name="name" id="name" class="form-control">
+                                <input type="text" name="name" id="name" class="form-control" required="">
                             </div>
                             <div class="form-group">
                                 <label for="email" class="float-left mr-4"><i class="fas fa-envelope-square"></i> Email</label>
-                                <input type="email" name="email" id="email" class="form-control">
+                                <input type="email" name="email" id="email" class="form-control" required="">
                             </div>
                             <div class="form-group">
                                 <label for="phone" class="float-left mr-4"><i class="fas fa-phone"></i> Phone</label>
-                                <input type="text" name="phone" id="phone" class="form-control">
+                                <input type="text" name="phone" id="phone" class="form-control" required="">
                             </div>
                             <div class="form-group">
                                 <label for="description" class="float-left mr-2"><i class="fa fa-edit"></i> Description</label>
-                                <textarea name="description" id="description" cols="30" rows="3" class="form-control"></textarea>
+                                <textarea name="description" id="description" cols="30" rows="3" class="form-control" required=""></textarea>
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Submit" class="btn btn-info btn-sm">
+                                <input type="submit" value="Submit" name="submit" class="btn btn-info btn-sm">
                             </div>
                         </form>
                     </div>
