--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="social-links text-center">
-                            <a href="https://web.facebook.com/minaung.paing.75?ref=bookmarks"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://web.facebook.com/thurein.75?ref=bookmarks"><i class="fab fa-facebook-f"></i></a>
                             <a href="mailto:thurein.htun@ucsy.edu.mm"><i class="fas fa-envelope-square"></i></a>
                             <a href="#"><i class="fab fa-instagram"></i></a>
                             <a href="#"><i class="fab fa-twitter-square"></i></a>
