--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h1>I am Thu Rein Htun</h1>
                 <p class="me">2+ years experince in designing and developing websites using html,css,javascript and php.<br>
                     I'm very interesting in developing websites especailly with PHP Framework (Laravel).</p>
-                    <a href="#contact" class="btn btn-outline-light btn-md ">Read More   </a>					
+                    <a href="#contact" class="btn btn-outline-light btn-md ">Contact Now   </a>					
                 </div>
             </div>
         </div>
